# chat-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  graph.py  main.py  schema.py
docs/superpowers/plans/: 2026-03-14-chat-server.md
docs/superpowers/specs/: 2026-03-14-chat-server-design.md
tests/: conftest.py  test_api.py  test_config.py  test_graph.py  test_schema.py
